hero section in progress

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -8,6 +8,6 @@ body {
     margin: 0;
 }
 
-.container {
-    padding: 0 $contentSpacing;
-}
+// .container {
+//     padding: 0 $contentSpacing;
+// }
