--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -1,1 +1,53 @@
-/*# sourceMappingURL=desktop.css.map */
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
+html {
+  font-size: 15px;
+}
+
+h1 {
+  font-size: 3.5rem;
+}
+
+h2 {
+  font-size: 2.5rem;
+}
+
+h3 {
+  font-size: 2rem;
+}
+
+p {
+  font-size: 2.7rem;
+}
+
+.hero {
+  border: 1px solid black;
+  width: 1440px;
+  height: 729px;
+  background-color: black;
+  background-image: url(/images/hero\ image1.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: auto 600px;
+  padding-left: 0px;
+  background-position-x: 0%;
+  background-position-y: 100%;
+  color: white;
+}
+.hero .container header .hamburger {
+  display: none;
+}
+.hero .container header nav {
+  display: block;
+}
+.hero .container header nav ul {
+  list-style: none;
+  display: flex;
+  gap: 15px;
+}/*# sourceMappingURL=desktop.css.map */
