--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -17,10 +17,14 @@
     padding-left: 0px;
     background-position-x: 0%;
     background-position-y: 100%;
-    color: white;
+    color:#C2DBBAff;
 
     .container {
         header {
+            .logo {
+                width: 50px;
+                height: 50px;
+            }
             .hamburger {
                 display: none;
             }
