--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -30,7 +30,7 @@ p {
   border: 1px solid black;
   width: 1440px;
   height: 729px;
-  background-color: black;
+  background-color: red;
   background-image: url(/images/hero\ image1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -40,9 +40,16 @@ p {
   background-position-y: 100%;
   color: #c2dbba;
 }
+.hero .container {
+  margin: 0 100px;
+}
+.hero .container header {
+  display: flex;
+  align-items: center;
+}
 .hero .container header .logo {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
 }
 .hero .container header .hamburger {
   display: none;
