--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -9,7 +9,7 @@
     border: 1px solid black;
     width: 1440px;
     height: 729px;
-    background-color: black;
+    background-color: red;
     background-image: url(/images/hero\ image1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -17,13 +17,18 @@
     padding-left: 0px;
     background-position-x: 0%;
     background-position-y: 100%;
-    color:#C2DBBAff;
+    color:#C2DBBAff; 
 
     .container {
+        margin: 0 100px;
+        
         header {
+            display: flex;
+            align-items: center;
+            
             .logo {
-                width: 50px;
-                height: 50px;
+                width: 100px;
+                height: 100px;
             }
             .hamburger {
                 display: none;
