--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -23,14 +23,14 @@ h3 {
 }
 
 p {
-  font-size: 2.7rem;
+  font-size: 1rem;
 }
 
 .hero {
   border: 1px solid black;
   width: 1440px;
   height: 729px;
-  background-color: red;
+  background-color: black;
   background-image: url(/images/hero\ image1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -41,7 +41,7 @@ p {
   color: #c2dbba;
 }
 .hero .container {
-  margin: 0 100px;
+  position: relative;
 }
 .hero .container header {
   display: flex;
@@ -61,4 +61,22 @@ p {
   list-style: none;
   display: flex;
   gap: 15px;
+}
+.hero .container .text {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  text-align: end;
+  width: 600px;
+  height: 400px;
+  position: absolute;
+  right: 100px;
+  top: 300px;
+}
+.hero .container .text button {
+  width: 150px;
+  height: 50px;
+  margin-top: 30px;
+  background-color: #c2dbba;
 }/*# sourceMappingURL=desktop.css.map */
