--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -9,7 +9,7 @@
     border: 1px solid black;
     width: 1440px;
     height: 729px;
-    background-color: red;
+    background-color: black;
     background-image: url(/images/hero\ image1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -17,32 +17,58 @@
     padding-left: 0px;
     background-position-x: 0%;
     background-position-y: 100%;
-    color:#C2DBBAff; 
+    color: #C2DBBAff;
 
     .container {
-        margin: 0 100px;
-        
+       position: relative ;
+
+
         header {
             display: flex;
             align-items: center;
-            
+
             .logo {
                 width: 100px;
                 height: 100px;
             }
+
             .hamburger {
                 display: none;
             }
+
             nav {
                 display: block;
+
                 ul {
                     list-style: none;
                     display: flex;
                     gap: 15px;
                 }
             }
+
         }
+        .text {
+            width: 300px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            text-align: end;
+            width: 600px;
+            height: 400px;
+            position: absolute;
+            right: 100px;
+            top: 300px;
+
+            button {
+                width: 150px;
+                height: 50px;
+                margin-top: 30px;
+                background-color: #C2DBBAff;
+                
+            }
+
     }
+}
 
 
 
