--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -28,7 +28,7 @@ p {
 
 .hero {
   border: 1px solid black;
-  width: 1440px;
+  width: 100%;
   height: 729px;
   background-color: black;
   background-image: url(/images/hero\ image1.jpg);
@@ -79,4 +79,33 @@ p {
   height: 50px;
   margin-top: 30px;
   background-color: #c2dbba;
+}
+
+.hero-categories {
+  width: 100%;
+  height: 350px;
+  padding: 70px 200px;
+  background-color: #c2dbba;
+}
+.hero-categories .categories {
+  display: flex;
+  justify-content: space-between;
+}
+.hero-categories .categories .category {
+  position: relative;
+  width: 340px;
+  height: 190px;
+  background-color: #73C088;
+  border-radius: 10%;
+  text-align: center;
+}
+.hero-categories .categories .category img {
+  position: absolute;
+  left: 25%;
+  top: -70px;
+  height: auto;
+  width: 185px;
+}
+.hero-categories .categories .category h4 {
+  padding-top: 120px;
 }/*# sourceMappingURL=desktop.css.map */
