--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -7,7 +7,7 @@
 
 .hero {
     border: 1px solid black;
-    width: 1440px;
+    width: 100%;
     height: 729px;
     background-color: black;
     background-image: url(/images/hero\ image1.jpg);
@@ -20,7 +20,7 @@
     color: #C2DBBAff;
 
     .container {
-       position: relative ;
+        position: relative;
 
 
         header {
@@ -47,6 +47,7 @@
             }
 
         }
+
         .text {
             width: 300px;
             display: flex;
@@ -64,15 +65,46 @@
                 height: 50px;
                 margin-top: 30px;
                 background-color: #C2DBBAff;
-                
+
             }
 
+        }
     }
+
+
 }
 
+.hero-categories {
+    width: 100%;
+    height: 350px;
+    padding: 70px 200px ;
+    background-color: #C2DBBAff;
 
+    .categories {
+        display: flex;
+        justify-content: space-between;
+        
 
+        .category {
+            position: relative;
+            width: 340px;
+            height: 190px;
+            background-color: #73C088;
+            border-radius: 10%;
+            text-align: center;
+            
+            img {
+                position: absolute;
+                left: 25%;
+                top: -70px;
+                height: auto; ;
+                width: 185px;
+                
+            }
+            h4 {
+                padding-top: $xxl;
+            }
+        }
 
-
-
+    }
 }
