--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -108,4 +108,11 @@ p {
 }
 .hero-categories .categories .category h4 {
   padding-top: 120px;
+}
+
+.products {
+  width: 100%;
+  height: 500px;
+  background-color: #c2dbba;
+  padding: 70px 200px;
 }/*# sourceMappingURL=desktop.css.map */
