added categories on landing page

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -95,8 +95,8 @@ p {
   position: relative;
   width: 340px;
   height: 190px;
-  background-color: #73C088;
-  border-radius: 10%;
+  background-color: #397D54;
+  border-radius: 20px;
   text-align: center;
 }
 .hero-categories .categories .category img {
@@ -112,7 +112,78 @@ p {
 
 .products {
   width: 100%;
-  height: 500px;
+  height: 2000px;
   background-color: #c2dbba;
   padding: 70px 200px;
+}
+.products .zzplant {
+  display: flex;
+  justify-content: space-between;
+  background-color: #054A29;
+  height: 560px;
+  padding: 60px 30px;
+  border-radius: 20px;
+  margin-bottom: 30px;
+}
+.products .zzplant img {
+  width: 500px;
+  height: auto;
+}
+.products .zzplant .zzplant-description {
+  text-align: center;
+  align-content: center;
+  color: #73C088;
+}
+.products .zzplant .zzplant-description button {
+  width: 150px;
+  height: 50px;
+  margin-top: 30px;
+  background-color: #c2dbba;
+}
+.products .snake-plant {
+  background-image: url("/images/test.jpg");
+  background-size: cover;
+  background-position-y: 100%;
+  height: 340px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 30px;
+  color: #054A29;
+  margin-bottom: 30px;
+}
+.products .snake-plant button {
+  width: 150px;
+  height: 50px;
+  margin-top: 30px;
+  background-color: #c2dbba;
+}
+.products .pothos {
+  height: 250px;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 20px;
+  background-color: #c2dbba;
+}
+.products .pothos img {
+  height: auto;
+  width: 500px;
+  border-radius: 20px;
+}
+.products .pothos .pothos-description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  color: #73C088;
+  background-color: #397D54;
+  border-radius: 20px;
+}
+.products .pothos button {
+  width: 150px;
+  height: 50px;
+  margin-top: 30px;
+  background-color: #c2dbba;
 }/*# sourceMappingURL=desktop.css.map */
