--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -78,6 +78,7 @@
     width: 100%;
     height: 350px;
     padding: 70px 200px;
+
     background-color: $tea-green;
 
     .categories {
@@ -113,10 +114,9 @@
 
 .products {
     width: 100%;
-    height: 2000px;
     background-color: #C2DBBAff;
     padding: 70px 200px;
-    
+
 
     .zzplant {
         display: flex;
@@ -161,7 +161,7 @@
         padding: $mid;
         color: $green6;
         margin-bottom: $mid;
-        
+
 
         button {
             width: 150px;
@@ -180,10 +180,11 @@
         border-radius: 20px;
         background-color: $tea-green;
 
-        img {
-            height: auto;
-            width: 500px;
+        .pothos-background {
+            background-image: url("/images/pothos-background.jpg");
+            background-size: cover;
             border-radius: 20px;
+            width: 49%;
 
         }
 
@@ -193,10 +194,11 @@
             flex-direction: column;
             justify-content: center;
             align-items: flex-start;
-
+            width: 49%;
             color: $green3;
             background-color: $green4;
             border-radius: 20px;
+            padding: $mid;
 
         }
 
@@ -208,4 +210,25 @@
 
         }
     }
+}
+
+.shop-description {
+    background-color: $tea-green;
+    padding: 70px 200px;
+    display: flex;
+    color: $green6;
+
+    .description {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+
+    }
+
+    img {
+        border-radius: 20px;
+        width: 500px;
+    }
+
 }
