--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -43,10 +43,12 @@ p {
 }
 .hero .container {
   position: relative;
+  padding: 70px 200px;
 }
 .hero .container header {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .hero .container header .logo {
   width: 100px;
@@ -206,4 +208,44 @@ p {
 .shop-description img {
   border-radius: 20px;
   width: 500px;
+}
+
+footer {
+  width: 100%;
+  background-color: #054A29;
+  height: 365px;
+  padding: 0 200px;
+  color: #c2dbba;
+}
+footer .nav-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+footer .nav-footer .logo {
+  width: 100px;
+  height: 100px;
+}
+footer .nav-footer nav {
+  display: block;
+}
+footer .nav-footer nav ul {
+  list-style: none;
+  display: flex;
+  gap: 15px;
+}
+footer .final-description {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  align-items: center;
+  margin: 60px 0;
+}
+footer .final-description p {
+  width: 560px;
+  text-align: left;
+}
+footer .final-description .social {
+  display: flex;
+  gap: 15px;
 }/*# sourceMappingURL=desktop.css.map */
