--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -21,7 +21,7 @@
 
     .container {
         position: relative;
-        padding: 70px 200px;
+        padding: 0 200px;
 
 
 
@@ -29,6 +29,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            border-bottom: 1px solid rgba(194, 219, 186, 0.3);
 
             .logo {
                 width: 100px;
@@ -45,23 +46,32 @@
                 ul {
                     list-style: none;
                     display: flex;
-                    gap: 15px;
+                    gap: $mid;
+                    justify-content: space-between;
+                    
+                    padding: 0;
                 }
+            }
+            .shop {
+                display: flex;
+                gap: 15px;
             }
 
         }
 
         .text {
-            width: 300px;
+            // width: 300px;
             display: flex;
             flex-direction: column;
-            align-items: flex-end;
-            text-align: end;
             width: 600px;
             height: 400px;
-            position: absolute;
-            right: 100px;
-            top: 300px;
+            // position: absolute;
+            // right: 100px;
+            // top: 300px;
+            transform: translateX(527px) translateY(152px);
+            text-align: right;
+            align-items: flex-end;
+            
 
             button {
                 width: 150px;
