--- a/styles/products/products-desktop.css
+++ b/styles/products/products-desktop.css
@@ -30,7 +30,6 @@ p {
 .hero {
   border: 1px solid black;
   width: 100%;
-  height: 729px;
   background-color: black;
   color: #c2dbba;
 }
@@ -64,6 +63,19 @@ p {
 .hero .container header .shop {
   display: flex;
   gap: 15px;
+}
+.hero h2 {
+  color: #c2dbba;
+  text-align: center;
+}
+
+.products {
+  padding: 0 200px;
+  background-color: #c2dbba;
+  height: 750px;
+}
+.products .search {
+  padding-top: 30px;
 }
 
 .shop-description {
