--- a/styles/products/products-desktop.scss
+++ b/styles/products/products-desktop.scss
@@ -6,7 +6,6 @@
 .hero {
     border: 1px solid black;
     width: 100%;
-    height: 729px;
     background-color: black;
 
     color: #C2DBBAff;
@@ -56,7 +55,22 @@
 
 
     }
+    h2 {
+        color: $tea-green;
+        text-align: center;
+    }
 
+}
+
+.products {
+    padding: 0 200px;
+    background-color: $tea-green;
+    //de sters height
+    height: 750px;
+    .search {
+        padding-top: $mid;
+    }
+    
 }
 
     
