--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -17,7 +17,7 @@
     padding-left: 0px;
     background-position-x: 0%;
     background-position-y: 100%;
-    color: #C2DBBAff;
+    color: $tea-green;
 
     .container {
         position: relative;
@@ -48,8 +48,20 @@
                     display: flex;
                     gap: $mid;
                     justify-content: space-between;
-                    
                     padding: 0;
+                    li {
+                        a {
+                            color: $tea-green;
+                            text-decoration: none;
+
+                            &:active,
+                            &:visited {
+                                color:$tea-green
+                            }
+                        }
+
+                    }
+                    
                 }
             }
             .shop {
