products page in progress

--- a/styles/products/products-desktop.scss
+++ b/styles/products/products-desktop.scss
@@ -85,7 +85,7 @@
         padding-top: $mid;
     }
 
-    .item-list {
+    #item-list {
         // display: flex;
         // flex-wrap: wrap;
         // justify-content: space-between;
