--- a/styles/products/products-desktop.css
+++ b/styles/products/products-desktop.css
@@ -83,16 +83,16 @@ p {
 .products .search {
   padding-top: 30px;
 }
-.products .item-list {
+.products #item-list {
   display: grid;
   grid-template-columns: 1fr 1fr;
   text-align: center;
 }
-.products .item-list .item {
+.products #item-list .item {
   width: 600px;
   height: 610px;
 }
-.products .item-list .item img {
+.products #item-list .item img {
   width: 390px;
   height: 400px;
 }
