--- a/styles/products/products-desktop.css
+++ b/styles/products/products-desktop.css
@@ -87,14 +87,32 @@ p {
   display: grid;
   grid-template-columns: 1fr 1fr;
   text-align: center;
+  margin-top: 30px;
 }
 .products #item-list .item {
   width: 600px;
   height: 610px;
+  margin-bottom: 60px;
 }
 .products #item-list .item img {
   width: 390px;
   height: 400px;
+  border-radius: 20px;
+}
+.products #item-list .item .itemTitle, .products #item-list .item .price {
+  color: #054A29;
+}
+.products #item-list .item p {
+  font-size: 1.5rem;
+  margin: 15px 0 15px 0;
+}
+.products #item-list .item button {
+  width: 180px;
+  height: 45px;
+  margin-top: 15px;
+  background-color: #054A29;
+  color: #c2dbba;
+  font-size: 1.2rem;
 }
 
 .shop-description {
