--- a/styles/products/products-desktop.scss
+++ b/styles/products/products-desktop.scss
@@ -101,6 +101,8 @@
             height: 610px;
             margin-bottom: $xl;
 
+            &.is-hidden { display: none; }
+
             img {
                 width: 390px;
                 height: 400px;
