--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -101,7 +101,6 @@
 
 .hero-categories {
     width: 100%;
-    height: 350px;
     padding: 70px 200px;
 
     background-color: $tea-green;
@@ -139,7 +138,7 @@
 
 .products {
     width: 100%;
-    background-color: #C2DBBAff;
+    background-color: $tea-green;
     padding: 70px 200px;
 
 
