--- a/styles/products/products-desktop.scss
+++ b/styles/products/products-desktop.scss
@@ -150,6 +150,7 @@
     padding: 70px 200px;
     display: flex;
     color: $green6;
+    align-items: center;
 
     .description {
         display: flex;
