--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -208,6 +208,7 @@ p {
   padding: 70px 200px;
   display: flex;
   color: #054A29;
+  align-items: center;
 }
 .shop-description .description {
   display: flex;
