--- a/styles/product/product-desktop.css
+++ b/styles/product/product-desktop.css
@@ -110,20 +110,31 @@ p {
   margin: 30px 0;
 }
 .hero-product-details .gallery {
-  padding: 0 200px;
+  padding: 60px 200px;
   width: 100%;
   gap: 1rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
 }
 .hero-product-details .gallery .Image {
-  width: 400px;
-  height: 400px;
+  width: 450px;
+  height: 295px;
+  border-radius: 20px;
+  transition: all 500ms;
+  overflow: hidden;
 }
 .hero-product-details .gallery .Image.tall {
-  width: 400px;
-  height: 400px;
+  width: 650px;
+  height: 605px;
+}
+.hero-product-details .gallery .Image:hover {
+  box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em, rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
+  transform: translateY(-10px) scale(1.1);
 }
 .hero-product-details .gallery .tall {
-  grid-row: span 2/auto;
+  grid-column: 2/span 2;
+  grid-row: 1/span 2;
 }
 
 .shop-description {
