--- a/styles/product/product-desktop.scss
+++ b/styles/product/product-desktop.scss
@@ -115,25 +115,36 @@
     }
 
     .gallery {
-        padding: 0 200px;
+        padding: $xl 200px;
         width: 100%;
         // display: grid;
         gap: 1rem;
-        
-
+        // height: 600px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
 
         .Image {
-            width: 400px;
-            height: 400px;
+            width: 450px;
+            height: 295px;
+            border-radius: 20px;
+            transition: all 500ms;
+            overflow: hidden;
 
             &.tall {
-                width: 400px;
-                height: 400px;
+                width: 650px;
+                height: 605px;
+            }
+
+            &:hover {
+                box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em, rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
+                transform: translateY(-10px) scale(1.1);
             }
         }
 
         .tall {
-            grid-row: span 2 / auto;
+            grid-column: 2 / span 2;
+            grid-row: 1 / span 2;
         }
     }
 
