product page javascript to be updated

--- a/styles/product/product-desktop.css
+++ b/styles/product/product-desktop.css
@@ -109,7 +109,7 @@ p {
   font-size: 1.2rem;
   margin: 30px 0;
 }
-.hero-product-details .gallery {
+.hero-product-details #gallery {
   padding: 60px 200px;
   width: 100%;
   gap: 1rem;
@@ -117,22 +117,22 @@ p {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
 }
-.hero-product-details .gallery .Image {
+.hero-product-details #gallery .Image {
   width: 450px;
   height: 295px;
   border-radius: 20px;
   transition: all 500ms;
   overflow: hidden;
 }
-.hero-product-details .gallery .Image.tall {
+.hero-product-details #gallery .Image.tall {
   width: 650px;
   height: 605px;
 }
-.hero-product-details .gallery .Image:hover {
+.hero-product-details #gallery .Image:hover {
   box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em, rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
   transform: translateY(-10px) scale(1.1);
 }
-.hero-product-details .gallery .tall {
+.hero-product-details #gallery .tall {
   grid-column: 2/span 2;
   grid-row: 1/span 2;
 }
