--- a/styles/product/product-desktop.scss
+++ b/styles/product/product-desktop.scss
@@ -114,7 +114,7 @@
         }
     }
 
-    .gallery {
+    #gallery {
         padding: $xl 200px;
         width: 100%;
         // display: grid;
