--- a/styles/product/product-desktop.scss
+++ b/styles/product/product-desktop.scss
@@ -92,6 +92,7 @@
             width: 540px;
             height: 560px;
             border-radius: 20px;
+            
         }
 
         .details {
@@ -124,9 +125,10 @@
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(2, 1fr);
 
-        .Image {
+        img {
             width: 450px;
             height: 295px;
+            object-fit: cover;
             border-radius: 20px;
             transition: all 500ms;
             overflow: hidden;
