shopping cart in progress

--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -67,6 +67,23 @@
             .shop {
                 display: flex;
                 gap: 15px;
+                .shopping-cart {
+                    position: relative;
+                    .item-count{
+                        position: absolute;
+                        color: black;
+                        border-radius: 50%;
+                        background-color: $tea-green;
+                        padding: 5px;
+                        top: -20px;
+                        right: -15px;
+                        min-width: 30px;
+    
+                        &.hide{
+                            // display: none;
+                        }
+                    }
+                }
             }
 
         }
