--- a/styles/products/products-desktop.scss
+++ b/styles/products/products-desktop.scss
@@ -60,6 +60,23 @@
             .shop {
                 display: flex;
                 gap: 15px;
+                .shopping-cart {
+                    position: relative;
+                    .item-count{
+                        position: absolute;
+                        color: black;
+                        border-radius: 50%;
+                        background-color: $tea-green;
+                        padding: 5px;
+                        top: -20px;
+                        right: -15px;
+                        min-width: 30px;
+    
+                        &.hide{
+                            // display: none;
+                        }
+                    }
+                }
             }
 
         }
