--- a/styles/product/product-desktop.scss
+++ b/styles/product/product-desktop.scss
@@ -66,14 +66,16 @@
                         position: absolute;
                         color: black;
                         border-radius: 50%;
-                        background-color: $tea-green;
+                        background-color: $green6;
+                        color: $tea-green;
+                        text-align: center;
                         padding: 5px;
                         top: -20px;
                         right: -15px;
                         min-width: 30px;
     
                         &.hide{
-                            // display: none;
+                            display: none;
                         }
                     }
                 }
