--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -73,14 +73,16 @@
                         position: absolute;
                         color: black;
                         border-radius: 50%;
-                        background-color: $tea-green;
+                        background-color: $green6;
+                        color: $tea-green;
+                        text-align: center;
                         padding: 5px;
                         top: -20px;
                         right: -15px;
                         min-width: 30px;
     
                         &.hide{
-                            // display: none;
+                            display: none;
                         }
                     }
                 }
@@ -110,6 +112,21 @@
 
             }
 
+        }
+        .cart-container {
+            width: 300px;
+            height: 500px;
+            background-color: red;
+            // display: none;
+            position: absolute;
+            top: 105px;
+            right: 50px;
+            z-index: 1;
+            &.hide{
+                display: none;
+            }
+             
+            
         }
     }
 
