--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -49,6 +49,7 @@
                     gap: $mid;
                     justify-content: space-between;
                     padding: 0;
+
                     li {
                         a {
                             color: $tea-green;
@@ -56,20 +57,23 @@
 
                             &:active,
                             &:visited {
-                                color:$tea-green
+                                color: $tea-green
                             }
                         }
 
                     }
-                    
+
                 }
             }
+
             .shop {
                 display: flex;
                 gap: 15px;
+
                 .shopping-cart {
                     position: relative;
-                    .item-count{
+
+                    .item-count {
                         position: absolute;
                         color: black;
                         border-radius: 50%;
@@ -80,8 +84,8 @@
                         top: -20px;
                         right: -15px;
                         min-width: 30px;
-    
-                        &.hide{
+
+                        &.hide {
                             display: none;
                         }
                     }
@@ -102,7 +106,7 @@
             transform: translateX(527px) translateY(152px);
             text-align: right;
             align-items: flex-end;
-            
+
 
             button {
                 width: 150px;
@@ -113,20 +117,67 @@
             }
 
         }
+
         .cart-container {
-            width: 300px;
-            height: 500px;
-            background-color: red;
+            width: 400px;
+            height: 600px;
+            background-color: $tea-green;
             // display: none;
             position: absolute;
             top: 105px;
             right: 50px;
             z-index: 1;
-            &.hide{
+
+            &.hide {
                 display: none;
             }
-             
-            
+
+            .cart-header {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: $mid;
+                color: $green6;
+                box-shadow: $green6 0 5px 15px;
+
+            }
+
+            .cart-content {
+                color: $green6;
+
+                ul {
+                    list-style: none;
+                    padding: 0 $baseSpacing;
+
+                    li {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        align-content: space-between;
+                        
+
+                        // &.hidden {
+                        //     display: none;
+                        // }
+                        img {
+                            width: 50px;
+                            height: 50px;
+                        }
+                        button {
+                            background-color: $tea-green;
+                            color: $green6;
+                            padding: 5px;
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            cursor: pointer;
+                            border: 1px solid $green6;
+                            width: 100px;
+                            height: 30px;
+                        }
+                    }
+                }
+            }
         }
     }
 
@@ -302,7 +353,7 @@ footer {
     .nav-footer {
         display: flex;
         align-items: center;
-        
+
         justify-content: space-between;
 
         .logo {
@@ -321,18 +372,20 @@ footer {
         }
 
     }
+
     .final-description {
         display: flex;
         justify-content: space-between;
         text-align: center;
         align-items: center;
         margin: $xl 0;
-        
+
         p {
             width: 560px;
             text-align: left;
-           
+
         }
+
         .social {
             display: flex;
             gap: 15px;
