cart buttons to be updated, error//the button works only on first li on product page, button from cart ko in index

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -11,3 +11,12 @@ body {
 // .container {
 //     padding: 0 $contentSpacing;
 // }
+
+button {
+    cursor: pointer;
+    border-style: none;
+    
+    
+}
+
+
