--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -113,6 +113,9 @@
                 height: 50px;
                 margin-top: 30px;
                 background-color: $tea-green;
+                cursor: pointer;
+                border-style: none;
+                color: $green6;
 
             }
 
@@ -127,6 +130,7 @@
             top: 105px;
             right: 50px;
             z-index: 1;
+
 
             &.hide {
                 display: none;
@@ -154,7 +158,7 @@
                         justify-content: space-between;
                         align-items: center;
                         align-content: space-between;
-                        
+
 
                         // &.hidden {
                         //     display: none;
@@ -163,6 +167,7 @@
                             width: 50px;
                             height: 50px;
                         }
+
                         button {
                             background-color: $tea-green;
                             color: $green6;
@@ -174,10 +179,34 @@
                             border: 1px solid $green6;
                             width: 100px;
                             height: 30px;
+
                         }
                     }
                 }
             }
+
+
+            .total-flex {
+                display: flex;
+                justify-content: space-between;
+                color: $green6;
+                padding: 0 $baseSpacing;
+            }
+
+            .checkout {
+                background-color: $green6;
+                color: $tea-green;
+                height: 50px;
+                width: 100%;
+                border-style: none;
+                box-shadow: $green6 0 5px 15px;
+                cursor: pointer;
+                font-size: 1.5rem;
+
+
+            }
+
+
         }
     }
 
@@ -251,6 +280,9 @@
                 height: 50px;
                 margin-top: 30px;
                 background-color: $tea-green;
+                cursor: pointer;
+                border-style: none;
+                color: $green6;
 
             }
         }
@@ -277,6 +309,9 @@
             height: 50px;
             margin-top: 30px;
             background-color: $tea-green;
+            cursor: pointer;
+            border-style: none;
+            color: $green6;
 
         }
     }
@@ -316,6 +351,9 @@
             height: 50px;
             margin-top: 30px;
             background-color: $tea-green;
+            cursor: pointer;
+            border-style: none;
+            color: $green6;
 
         }
     }
