--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -231,6 +231,8 @@
             background-color: $green4;
             border-radius: 20px;
             text-align: center;
+            
+            
 
             img {
                 position: absolute;
@@ -244,6 +246,7 @@
 
             h4 {
                 padding-top: $xxl;
+                color: $green6;
             }
         }
 
