color green4 corrected

--- a/styles/_colours.scss
+++ b/styles/_colours.scss
@@ -1,7 +1,7 @@
 //color scheme 1
 $green6:#054A29;
 $green5: #235D3A;
-$green4:  add;
+$green4:  #397D54;
 $green3: #73C088;
 $green2: #A8E0B7;
 $green1: #C8EAD1;
