--- a/styles/products/products-desktop.css
+++ b/styles/products/products-desktop.css
@@ -191,6 +191,13 @@ footer .nav-footer nav ul {
   display: flex;
   gap: 15px;
 }
+footer .nav-footer nav ul li a {
+  color: #c2dbba;
+  text-decoration: none;
+}
+footer .nav-footer nav ul li a:active, footer .nav-footer nav ul li a:visited {
+  color: #c2dbba;
+}
 footer .final-description {
   display: flex;
   justify-content: space-between;
