--- a/styles/products/products-desktop.scss
+++ b/styles/products/products-desktop.scss
@@ -86,7 +86,93 @@
 
         }
 
+        .cart-container {
+            width: 400px;
+            height: 600px;
+            background-color: $tea-green;
+            // display: none;
+            position: absolute;
+            top: 105px;
+            right: 50px;
+            z-index: 1;
 
+
+            &.hide {
+                display: none;
+            }
+
+            .cart-header {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: $mid;
+                color: $green6;
+                box-shadow: $green6 0 5px 15px;
+
+            }
+
+            .cart-content {
+                color: $green6;
+
+                ul {
+                    list-style: none;
+                    padding: 0 $baseSpacing;
+
+                    li {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        align-content: space-between;
+
+
+                        // &.hidden {
+                        //     display: none;
+                        // }
+                        img {
+                            width: 50px;
+                            height: 50px;
+                        }
+
+                        button {
+                            background-color: $tea-green;
+                            color: $green6;
+                            padding: 5px;
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            cursor: pointer;
+                            border: 1px solid $green6;
+                            width: 100px;
+                            height: 30px;
+
+                        }
+                    }
+                }
+            }
+
+
+            .total-flex {
+                display: flex;
+                justify-content: space-between;
+                color: $green6;
+                padding: 0 $baseSpacing;
+            }
+
+            .checkout {
+                background-color: $green6;
+                color: $tea-green;
+                height: 50px;
+                width: 100%;
+                border-style: none;
+                box-shadow: $green6 0 5px 15px;
+                cursor: pointer;
+                font-size: 1.5rem;
+
+
+            }
+
+
+        }
 
 
     }
