--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 * {
   box-sizing: border-box;
 }
@@ -30,6 +31,11 @@ h3 {
 
 p {
   font-size: 1rem;
+}
+
+h1, h2, h3, h4, h5, h6, p, li {
+  font-family: "Indie Flower", cursive;
+  font-size: 1.2rem;
 }
 
 .hero {
