--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+
 html {
     font-size: 15px;
 }
@@ -15,4 +17,10 @@ h3 {
 
 p {
     font-size: 1rem;
+}
+
+
+h1,h2,h3,h4,h5,h6,p, li {
+    font-family: 'Indie Flower', cursive;
+    font-size: 1.2rem;
 }
