--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -7,9 +7,11 @@ html {
 h1 {
     font-size: 3.5rem;
 }
+
 h2 {
     font-size: 2.5rem;
 }
+
 h3 {
     font-size: 2rem;
     margin: 0;
@@ -20,7 +22,14 @@ p {
 }
 
 
-h1,h2,h3,h4,h5,h6,p, li {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+li {
     font-family: 'Indie Flower', cursive;
-    font-size: 1.2rem;
+    
 }
