--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -33,9 +33,15 @@ p {
   font-size: 1rem;
 }
 
-h1, h2, h3, h4, h5, h6, p, li {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+li {
   font-family: "Indie Flower", cursive;
-  font-size: 1.2rem;
 }
 
 .hero {
