margin fixed after testing fonts

--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -18,8 +18,13 @@ h3 {
 }
 
 p {
-    font-size: 1rem;
+    font-size: 1.3rem;
 }
+button {
+    font-size: 1.2rem;
+}
+
+
 
 
 h1,
@@ -29,7 +34,8 @@ h4,
 h5,
 h6,
 p,
-li {
+li,
+button {
     font-family: 'Indie Flower', cursive;
     
 }
