--- a/styles/product/product-desktop.scss
+++ b/styles/product/product-desktop.scss
@@ -329,7 +329,7 @@ footer {
         justify-content: space-between;
         text-align: center;
         align-items: center;
-        margin: $xl 0;
+        margin: $baseSpacing 0;
 
         p {
             width: 560px;
