--- a/styles/product/product-desktop.css
+++ b/styles/product/product-desktop.css
@@ -30,7 +30,11 @@ h3 {
 }
 
 p {
-  font-size: 1rem;
+  font-size: 1.3rem;
+}
+
+button {
+  font-size: 1.2rem;
 }
 
 h1,
@@ -40,7 +44,8 @@ h4,
 h5,
 h6,
 p,
-li {
+li,
+button {
   font-family: "Indie Flower", cursive;
 }
 
@@ -293,7 +298,7 @@ footer .final-description {
   justify-content: space-between;
   text-align: center;
   align-items: center;
-  margin: 60px 0;
+  margin: 15px 0;
 }
 footer .final-description p {
   width: 560px;
