adjusting font size

--- a/styles/product/product-desktop.scss
+++ b/styles/product/product-desktop.scss
@@ -4,7 +4,7 @@
 @import "../spacings";
 
 .hero {
-    border: 1px solid black;
+    // border: 1px solid black;
     width: 100%;
     background-color: black;
 
