--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -16,6 +16,10 @@ h3 {
     font-size: 2rem;
     margin: 0;
 }
+h4 {
+    font-size: 1.3rem;
+}
+
 
 p {
     font-size: 1.3rem;
@@ -23,7 +27,9 @@ p {
 button {
     font-size: 1.2rem;
 }
-
+li {
+    font-size: 1.5em;
+}
 
 
 
