--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -29,12 +29,20 @@ h3 {
   margin: 0;
 }
 
+h4 {
+  font-size: 1.3rem;
+}
+
 p {
   font-size: 1.3rem;
 }
 
 button {
   font-size: 1.2rem;
+}
+
+li {
+  font-size: 1.5em;
 }
 
 h1,
@@ -50,7 +58,6 @@ button {
 }
 
 .hero {
-  border: 1px solid black;
   width: 100%;
   height: 729px;
   background-color: black;
