--- a/styles/products/products-desktop.css
+++ b/styles/products/products-desktop.css
@@ -29,12 +29,20 @@ h3 {
   margin: 0;
 }
 
+h4 {
+  font-size: 1.3rem;
+}
+
 p {
   font-size: 1.3rem;
 }
 
 button {
   font-size: 1.2rem;
+}
+
+li {
+  font-size: 1.5em;
 }
 
 h1,
