--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -147,12 +147,13 @@ button {
 }
 .hero .container .cart-container {
   width: 400px;
-  height: 600px;
+  height: 670px;
   background-color: #c2dbba;
   position: absolute;
-  top: 105px;
+  top: 70px;
   right: 50px;
   z-index: 1;
+  border-radius: 20px;
 }
 .hero .container .cart-container.hide {
   display: none;
